fix horizontal scroll

--- a/resources/client/components/style.css
+++ b/resources/client/components/style.css
@@ -228,8 +228,8 @@
   /* -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 1); */
   -fx-font-weight: bold;
   -fx-wrap-text: true;
-  /* -fx-pref-width: 490;
-  -fx-pref-height: 400; */
+  -fx-pref-width: 480;
+  /* -fx-pref-height: 400; */
   -fx-alignment: top-left; /* Adjusted alignment */
   background-color: #E8DDB5;
   font-family: Avantgarde;
